feat: initial openshift deployment
